--- a/src/renderer/windows/app/modules/player/playerMeta/playerMeta.scss
+++ b/src/renderer/windows/app/modules/player/playerMeta/playerMeta.scss
@@ -8,5 +8,9 @@
     &:last-of-type {
       margin-bottom: unset;
     }
+
+    > button {
+      display: contents;
+    }
   }
 }
